--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
   <div>
 
-    <img class="i1" src="images/image-qr-code.png" alt="">
+    <img class="i1" src="image-qr-code.png" alt="">
   </div>
 
   <div>
-    <img vlass="i2"  src="images/favicon-32x32.png" alt="">
+    <img vlass="i2"  src="favicon-32x32.png" alt="">
   </div>
 </body>
 </html>
